--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
         <title>My Profile</title>
     </head>
     <body>
+
+        <!...Header section...>
         <header>
+            <h1>My Profile</h1>
 <nav>
-    <a href="#About">About me</a>
-    <a href="#Contact">Contact</a>
-    <a href="#Hobbies">Hobbies</a>
+    <ul>
+    <li>About me</li>
+    <li>Contact</li>
+    <li>Hobbies<li>
+    </ul>
 </nav>
         </header>
-        <section id="About">
-            <h1>About Me</h1>
-            <img src="my-photo.png" alt="Bashir Abubakar smiling and facing the camera in a casual setting with a background showing a university campus, conveying a friendly and welcoming mood" width="200" height="200">
+
+        <!...Bio Section...>
+        <section>
+            <h2>About Me</h2>
+            <img src="my-photo.png" alt="Bashir Abubakar smiling and facing the camera in a casual setting with a background showing a university campus, conveying a friendly and welcoming mood">
             <p>Hello! I am Bashir Abubakar by name. a 3mtt fellow under the track of software development, i live in zaria kaduna state, i am in 200 level computer science education ABU Zaria.  and I welcome you to my profile.</p>
             <p>I am passionate about coding and technology, and I enjoy learning new programming languages and frameworks. My goal is to become a proficient software developer and contribute to innovative projects.</p>
         </section>
-        <section id="Hobbies">
+
+        <!... Hobbies section...>
+        <section>
             <h2>Hobbies</h2>
             <ul>
                 <li>Reading</li>
@@ -25,15 +34,13 @@
                 <li>Travelling</li>
             </ul>
         </section>
-        <footer id="Contact">
+
+        <!...footer section....>
+        <footer>
             <h2>Contact</h2>
-            <p>You can reach me at:</p>
-            <ul>
-                <li>Email: <a href="mailto:bashirabubakar650@gmail.com">bashirabubakar650@gmail.com</a></li>
-                <li>Twitter: <a href="https://x.com/BashirA92049750_">@BashirA92049750</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/bashir-abubakar-4b0b1a1b6/">Bashir Abubakar</a></li>
-                <li>GitHub: <a href="github.com/bashircosc">bashircosc</a></li>
-            </ul>
+                <p>Email: bashirabubakar650@gmail.com</p>
+                <p>Twitter: @BashirA92049750</p>
+                <p>GitHub: bashircosc</p>
             <p>&copy; 2025 Bashir Abubakar. All rights reserved.</p>
         </footer>
     </body>
